My developer Edition/src/objects/Player__c.object
<CustomObject>
    <description>Players in a particlar team</description>
    <fields>
        <fullName>Club_Captain__c</fullName>
        <label>Club Captain</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jersey_Number__c</fullName>
        <label>Jersey Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Players</relationshipLabel>
        <relationshipName>Players</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Player</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Player Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>